--- a/Projects/index.html
+++ b/Projects/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="icon" type="image/x-icon" href="https://github.com/SteamWo1f/Optimized-Oasis-Site/raw/main/assets/icon.ico">
+<link rel="icon" type="image/x-icon" href="https://steamwolf.vercel.app/assets/icon.svg">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-<title>SteamWolf</title>
+<title>SteamWolf | Projects</title>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SteamWolf</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://steamwolf.vercel.app/projects/style.css">
 </head>
 <body>
     <nav class="nav-container">
