--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="icon" type="image/x-icon" href="./assets/icon.svg">
+<link rel="icon" type="image/x-icon" href="https://steamwolf.vercel.app/assets/icon.svg">
 <title>SteamWolf</title>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SteamWolf</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://steamwolf.vercel.app/style.css">
 </head>
 <body>
     <nav class="nav-container">
@@ -35,8 +35,8 @@
     <footer>
         <div class="footer-text">
             <div>
-                <p>&copy; 2024 SteamWolf. Released under the <a href="https://raw.githubusercontent.com/SteamWo1f/Optimized-Oasis/main/LICENSE" target="_blank">MIT License</a>.</p>
-                <p>View This Websites Source <a href="https://github.com/SteamWo1f/OOS">Here</a></p>
+                <p>&copy; 2024 SteamWolf. Released under the <a href="https://raw.githubusercontent.com/SteamWo1f/website-v3/main/LICENSE" target="_blank">MIT License</a>.</p>
+                <p>View This Websites Source <a href="https://github.com/SteamWo1f/website-v3">Here</a></p>
             </div>
         </div>
     </footer>
