--- a/Links/index.html
+++ b/Links/index.html
@@ -7,14 +7,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SteamWolf</title>
-    <link rel="stylesheet" href="https://steamwolf.vercel.app/links/style.css">
+    <link rel="stylesheet" href="https://steamwolf.vercel.app/Links/style.css">
 </head>
 <body>
     <nav class="nav-container">
         <ul>
             <li><button class="nav-btn"><a href="https://steamwolf.vercel.app">Home</a></button></li>
-            <li><button class="nav-btn"><a href="https://steamwolf.vercel.app/links">Links</a></button></li>
-            <li><button class="nav-btn"><a href="https://steamwolf.vercel.app/projects">Projects</a></button></li>
+            <li><button class="nav-btn"><a href="https://steamwolf.vercel.app/Links">Links</a></button></li>
+            <li><button class="nav-btn"><a href="https://steamwolf.vercel.app/Projects">Projects</a></button></li>
         </ul>
     </nav>
     <div class="about">
