Added mailto email

--- a/Links/index.html
+++ b/Links/index.html
@@ -29,8 +29,8 @@
         <a target="_blank" href="https://www.reddit.com/user/SteamWo1f"><div class="nav-item"><i class="icon-container fa-brands fa-reddit" style="color: #ffe9db;"></i><p class="text-container p2">Reddit</p></div></a>
         <a target="_blank" href="https://www.tumblr.com/steamwo1f"><div class="nav-item"><i class="icon-container fa-brands fa-square-tumblr" style="color: #ffe9db;"></i><p class="text-container p2">Tumblr</p></div></a>
         <a target="_blank" href="https://bsky.app/profile/steamwolf.bsky.social"><div class="nav-item"><i class="icon-container fa-brands fa-bluesky" style="color: #ffe9db;"></i><p class="text-container p2">Bluesky</p></div></a>
-        <a target="_blank" href="https://archiveofourown.org/users/SteamWolf"><div class="nav-item"><i class="icon-container fa-solid fa-pen-nib" style="color: #ffe9db;"></i><p class="text-container p2">Ao3</p></div></a>
         <a target="_blank" href="https://www.linkedin.com/in/steamwolf"><div class="nav-item"><i class="icon-container fa-brands fa-linkedin" style="color: #ffe9db;"></i><p class="text-container p2">LinkedIn</p></div></a>
+        <a target="_blank" href="mailto:steamwolf.121.business@gmail.com"><div class="nav-item"><i class="icon-container fa-solid fa-envelope" style="color: #ffe9db;"></i><p class="text-container p2">Email</p></div></a>
     </div>
     <div class="about">
         <h2>Support Me</h2>
