--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="icon" type="image/x-icon" href="https://steamwolf.vercel.app/assets/icon.svg">
+<link rel="icon" type="image/x-icon" href="https://steamwolf.cc/assets/icon.svg">
 <title>SteamWolf</title>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SteamWolf</title>
-    <link rel="stylesheet" href="https://steamwolf.vercel.app/style.css">
+    <link rel="stylesheet" href="https://steamwolf.cc/style.css">
 </head>
 <body>
     <nav class="nav-container">
         <ul>
-            <li><button class="nav-btn"><a href="https://steamwolf.vercel.app">Home</a></button></li>
-            <li><button class="nav-btn"><a href="https://steamwolf.vercel.app/Links">Links</a></button></li>
-            <li><button class="nav-btn"><a href="https://steamwolf.vercel.app/Projects">Projects</a></button></li>
+            <li><button class="nav-btn"><a href="https://steamwolf.cc">Home</a></button></li>
+            <li><button class="nav-btn"><a href="https://steamwolf.cc/Links">Links</a></button></li>
+            <li><button class="nav-btn"><a href="https://steamwolf.cc/Projects">Projects</a></button></li>
         </ul>
     </nav>
     <header>
@@ -26,8 +26,8 @@
         <p>Hello there</p>
         <p>My name is SteamWolf and welcome to this here corner of the internet.</p>
         <p>I enjoy working with computers, from managing my home server & working with code to creating music with Ableton.</p>
-        <p>If you are curious about anything I do, you can find me around the Internet from my <a href="https://steamwolf.vercel.app/Links" target="_blank">Links</a> page,</p>
-        <p>or you can take a look at the current <a href="https://steamwolf.vercel.app/Projects" target="_blank">Projects</a> that I am working on.</p>
+        <p>If you are curious about anything I do, you can find me around the Internet from my <a href="https://steamwolf.cc/Links" target="_blank">Links</a> page,</p>
+        <p>or you can take a look at the current <a href="https://steamwolf.cc/Projects" target="_blank">Projects</a> that I am working on.</p>
         <p>Thank you for taking a interest in who I am and what I do,</p>
         <p>I hope you have a good day.</p>
     </div>
