--- a/Projects/index.html
+++ b/Projects/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="icon" type="image/x-icon" href="https://steamwolf.vercel.app/assets/icon.svg">
+<link rel="icon" type="image/x-icon" href="https://steamwolf.cc/assets/icon.svg">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 <title>SteamWolf | Projects</title>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SteamWolf</title>
-    <link rel="stylesheet" href="https://steamwolf.vercel.app/Projects/style.css">
+    <link rel="stylesheet" href="https://steamwolf.cc/Projects/style.css">
 </head>
 <body>
     <nav class="nav-container">
         <ul>
-            <li><button class="nav-btn"><a href="https://steamwolf.vercel.app">Home</a></button></li>
-            <li><button class="nav-btn"><a href="https://steamwolf.vercel.app/Links">Links</a></button></li>
-            <li><button class="nav-btn"><a href="https://steamwolf.vercel.app/Projects">Projects</a></button></li>
+            <li><button class="nav-btn"><a href="https://steamwolf.cc">Home</a></button></li>
+            <li><button class="nav-btn"><a href="https://steamwolf.cc/Links">Links</a></button></li>
+            <li><button class="nav-btn"><a href="https://steamwolf.cc/Projects">Projects</a></button></li>
         </ul>
     </nav>
     <div class="about">
