--- a/projects/index.html
+++ b/projects/index.html
@@ -13,8 +13,8 @@
     <nav class="nav-container">
         <ul>
             <li><button class="nav-btn"><a href="https://steamwolf.cc">Home</a></button></li>
-            <li><button class="nav-btn"><a href="https://steamwolf.cc/Links">Links</a></button></li>
-            <li><button class="nav-btn"><a href="https://steamwolf.cc/Projects">Projects</a></button></li>
+            <li><button class="nav-btn"><a href="https://steamwolf.cc/links">Links</a></button></li>
+            <li><button class="nav-btn"><a href="https://steamwolf.cc/projects">Projects</a></button></li>
         </ul>
     </nav>
     <div class="about">
