--- a/projects/index.html
+++ b/projects/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SteamWolf</title>
-    <link rel="stylesheet" href="https://steamwolf.cc/Projects/style.css">
+    <link rel="stylesheet" href="https://steamwolf.cc/projects/style.css">
 </head>
 <body>
     <nav class="nav-container">
