--- a/projects/index.html
+++ b/projects/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="nav-item">
             <div class="thumbnail-container">
-                <a href="https://steamwo1f.github.io/OOS" target="_blank">
+                <a href="https://oo.steamwolf.cc" target="_blank">
                     <img class="project-img2" src="https://raw.githubusercontent.com/SteamWo1f/OOS/main/assets/logo.png" alt="Icon" class="thumbnail-image">
                     <p class="text-container">Optimized Oasis</p>
                     <p class="text-container p2">A lightweight-ish Minecraft modpack that enhances your gameplay experience without adding any new items.</p>
