added custom mit license page

--- a/links/index.html
+++ b/links/index.html
@@ -44,7 +44,7 @@
     <footer>
         <div class="footer-text">
             <div>
-                <p>&copy; 2024 SteamWolf. Released under the <a href="https://raw.githubusercontent.com/SteamWo1f/website-v3/main/LICENSE" target="_blank">MIT License</a>.</p>
+                <p>&copy; 2024 SteamWolf. Released under the <a href="https://steamwolf.cc/mit" target="_blank">MIT License</a>.</p>
                 <p>View This Websites Source <a href="https://github.com/SteamWo1f/website-v3">Here</a></p>
             </div>
         </div>
