--- a/projects/index.html
+++ b/projects/index.html
@@ -25,7 +25,7 @@
     <div class="nav-grid">
         <div class="nav-item">
             <div class="thumbnail-container">
-                <a href="https://steamwo1f.github.io/ranlab" target="_blank">
+                <a href="https://ranlab.steamwolf.cc" target="_blank">
                     <img class="project-img" src="https://steamwo1f.github.io/ranlab/assets/dice1.svg" alt="Icon" class="thumbnail-image">
                     <p class="text-container">ranlab.</p>
                     <p class="text-container p2">A website that gives you a random link to a self hosted service</p>
