--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
     <header>
         <img class="logo" src="./assets/header.svg" alt="logo">
-        <h3 class="logo-subtext">DJ | Developer | Audio-Visual Producer & Editor</h3>
+        <h3 class="logo-subtext">Developer | Audio-Visual Producer & Editor</h3>
     </header>
 
 
