--- a/index.html
+++ b/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="icon" type="image/x-icon" href="https://steamwolf.cc/assets/icon.svg">
+<link rel="icon" type="image/x-icon" href="/assets/icon.svg">
 <title>SteamWolf</title>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SteamWolf</title>
-    <link rel="stylesheet" href="https://steamwolf.cc/style.css">
+    <link rel="stylesheet" href="/style.css">
     <script src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
 </head>
 <body>
-    <nav class="nav-container">
-        <ul>
-            <li><button class="nav-btn"><a href="https://steamwolf.cc">Home</a></button></li>
-            <li><button class="nav-btn"><a href="https://steamwolf.cc/projects">Projects</a></button></li>
-        </ul>
-    </nav>
     <header>
-        <img class="logo" src="./assets/header.svg" alt="logo">
-        <h3 class="logo-subtext">Developer | Audio-Visual Producer & Editor</h3>
+        <img class="logo" src="/assets/header.svg" alt="logo">
+        <h3 class="logo-subtext"> Home Sysadmin / AV Producer & Editor </h3>
     </header>
-
+    
     <div class="soc-about">
         <h3>
             <span class="socials"></span>
@@ -29,77 +23,66 @@
                         <iconify-icon 
                             class="social-icons" 
                             icon="tabler:brand-twitter" 
-                            style="color: #ffb07b"
                             data-tooltip="Twitter"
                             data-link="https://x.com/SteamWo1f"
                         ></iconify-icon>
                         <iconify-icon 
                             class="social-icons" 
                             icon="tabler:brand-github" 
-                            style="color: #ffb07b"
                             data-tooltip="GitHub"
                             data-link="https://github.com/SteamWo1f"
                         ></iconify-icon>
                         <iconify-icon 
                             class="social-icons" 
                             icon="tabler:brand-bluesky" 
-                            style="color: #ffb07b"
                             data-tooltip="Bluesky"
                             data-link="https://bsky.app/profile/steamwolf.cc"
                         ></iconify-icon>
                         <iconify-icon 
                             class="social-icons" 
                             icon="tabler:brand-spotify"
-                            style="color: #ffb07b"
                             data-tooltip="Spotify"
                             data-link="https://open.spotify.com/artist/5JGLhuu4PrZ3XpRHoElokK?si=rql1Ww3wT6KMyiqlslzNRQ"
                         ></iconify-icon>
                         <iconify-icon 
                             class="social-icons" 
                             icon="tabler:brand-bandcamp" 
-                            style="color: #ffb07b"
                             data-tooltip="Bandcamp"
                             data-link="https://steamwolf.bandcamp.com"
                         ></iconify-icon>
                         <iconify-icon 
                             class="social-icons" 
                             icon="tabler:brand-youtube" 
-                            style="color: #ffb07b"
                             data-tooltip="YouTube"
                             data-link="https://www.youtube.com/@SteamWo1f"
                         ></iconify-icon>
                         <iconify-icon 
                             class="social-icons" 
                             icon="tabler:brand-reddit" 
-                            style="color: #ffb07b"
                             data-tooltip="Reddit"
                             data-link="https://www.reddit.com/user/SteamWo1f"
                         ></iconify-icon>
                         <iconify-icon 
                             class="social-icons" 
                             icon="tabler:brand-tumblr" 
-                            style="color: #ffb07b"
                             data-tooltip="Tumblr"
                             data-link="https://www.tumblr.com/steamwo1f"
                         ></iconify-icon>
                         <iconify-icon 
                             class="social-icons" 
                             icon="tabler:brand-paypal" 
-                            style="color: #ffb07b"
                             data-tooltip="PayPal"
                             data-link="https://www.paypal.com/paypalme/SteamWo1f"
                         ></iconify-icon>
                         <iconify-icon 
                             class="social-icons" 
                             icon="tabler:coffee" 
-                            style="color: #ffb07b"
                             data-tooltip="Buy Me a Coffee"
                             data-link="https://ko-fi.com/steamwolf"
                         ></iconify-icon>
                         <iconify-icon 
                             class="social-icons" 
                             icon="tabler:mail" 
-                            style="color: #ffb07b"
                             data-tooltip="Email"
                             data-link="mailto:steamwolf.121.business@gmail.com"
                         ></iconify-icon>
@@ -109,10 +92,9 @@
     </div>
     <br>
     <div class="about">
-        <p>Good Afternoon:</p>
-        <p>I'm SteamWolf and welcome to this here corner of the internet.</p>
+        <p>Good Afternoon and welcome to this here corner of the internet.</p>
         <p>I enjoy working with computers, Be that from managing my home server to creating music with Ableton.</p>
-        <p>You can take a look at the current <a href="https://steamwolf.cc/projects" target="_blank">Projects</a> that I am working on, You can also find me from the links on the page.</p>
+        <p>You can take a look at the current Projects that I am working on, You can also find me from the links on this page.</p>
         <p>Thank you for taking a interest in who I am and what I do,</p>
         <p>I hope you have a good day.</p>
     </div>
@@ -121,16 +103,67 @@
         <h1 class="music-text">Music:</h1>
         <div class="music-slideshow">
             <div class="music-card">
-                <img src="https://f4.bcbits.com/img/a2957700856_16.jpg" alt="Album Cover">
-                <div class="music-info">
-                    <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=2070127354/size=large/bgcol=333333/linkcol=2ebd35/tracklist=false/artwork=none/transparent=true/" seamless><a href="https://steamwolf.bandcamp.com/track/bleeding-nostalgia">Bleeding Nostalgia by SteamWolf</a></iframe>
+                <img class="music-art" src="https://f4.bcbits.com/img/a2957700856_16.jpg" alt="Album Cover">
+                <div>
+                    <p class="music-info" >Bleeding Nostalgia</p>
+                </div>
+                <div class="button-list">
+                    <a class="music-button" href="https://steamwolf.bandcamp.com/track/bleeding-nostalgia" target="_blank">
+                        <iconify-icon 
+                            class="music-icon"
+                            icon="tabler:brand-bandcamp" 
+                        />
+                    </a>
+                    <a class="music-button" href="https://www.youtube.com/watch?v=0NGzYzaKl5c" target="_blank">
+                        <iconify-icon 
+                            class="music-icon"
+                            icon="tabler:brand-youtube" 
+                        />
+                    </a>
                 </div>
             </div>
             <div class="music-card">
-                <img src="https://f4.bcbits.com/img/a3188627306_16.jpg" alt="Album Cover">
-                <div class="music-info">
-                    <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=251047366/size=large/bgcol=333333/linkcol=4ec5ec/tracklist=false/artwork=none/transparent=true/" seamless><a href="https://steamwolf.bandcamp.com/track/teal-stars">Teal Stars by SteamWolf</a></iframe>
+                <img class="music-art" src="https://f4.bcbits.com/img/a3188627306_16.jpg" alt="Album Cover">
+                <div>
+                    <p class="music-info">Teal Stars</p>
                 </div>
+                <div class="button-list">
+                    <a class="music-button" href="https://open.spotify.com/track/39ejWxqGFi5p0IYJwCjc2D?si=36cb6714052444c3" target="_blank">
+                        <iconify-icon 
+                            class="music-icon" 
+                            icon="tabler:brand-spotify"
+                        />
+                    </a>
+                    <a class="music-button" href="https://steamwolf.bandcamp.com/track/teal-stars" target="_blank">
+                        <iconify-icon 
+                            class="music-icon"
+                            icon="tabler:brand-bandcamp" 
+                        />
+                    </a>
+                    <a class="music-button" href="https://www.youtube.com/watch?v=tTMhUBuuya8" target="_blank">
+                        <iconify-icon 
+                            class="music-icon"
+                            icon="tabler:brand-youtube" 
+                        />
+                    </a>
+                </div>
+            </div>
+        </div>
+        <p class="music-cc" xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><span property="dct:title">Audio & Music</span> by <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://steamwolf.cc">SteamWolf</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC-SA 4.0</a></p>
+    </div>
+    <br>
+    <div class="projects">
+        <h1 class="projects-text">Projects:</h1>
+        <div class="projects-slideshow">
+            <div class="projects-card">
+                <img class="projects-logo" style="max-width: 150px;" src="https://steamwo1f.github.io/ranlab/assets/dice1.svg" alt="Project Image">
+                <p class="projects-header"><a href="https://ranlab.steamwolf.cc" target="_blank">ranlab.</a></p>
+                <p class="projects-info" >A website that sends you to a random self-hosted services homepage or git repo.</p>
+            </div>
+            <div class="projects-card">
+                <img class="projects-logo" src="https://raw.githubusercontent.com/SteamWo1f/OOS/main/assets/logo.png" alt="Project Image">
+                <p class="projects-header"><a href="https://oo.steamwolf.cc" target="_blank">Optimized Oasis</a></p>
+                <p class="projects-info">A lightweight-ish Minecraft modpack that enhances your gameplay experience without adding any new items.</p>
             </div>
         </div>
     </div>
@@ -138,7 +171,7 @@
     <footer>
         <div class="footer-text">
             <div>
-                <p>&copy; 2024 SteamWolf. Released under the <a href="https://steamwolf.cc/mit" target="_blank">MIT License</a>.</p>
+                <p>&copy; 2025 SteamWolf. Released under the <a href="https://steamwolf.cc/mit" target="_blank">MIT License</a>.</p>
                 <p>View This Websites Source <a href="https://github.com/SteamWo1f/website-v3">Here</a></p>
             </div>
         </div>
