--- a/index.html
+++ b/index.html
@@ -22,67 +22,67 @@
                     <div class="social-grid">
                         <iconify-icon 
                             class="social-icons" 
-                            icon="tabler:brand-twitter" 
+                            icon="meteor-icons:twitter" 
                             data-tooltip="Twitter"
                             data-link="https://x.com/SteamWo1f"
                         ></iconify-icon>
                         <iconify-icon 
                             class="social-icons" 
-                            icon="tabler:brand-github" 
+                            icon="meteor-icons:github" 
                             data-tooltip="GitHub"
                             data-link="https://github.com/SteamWo1f"
                         ></iconify-icon>
                         <iconify-icon 
                             class="social-icons" 
-                            icon="tabler:brand-bluesky" 
+                            icon="meteor-icons:bluesky" 
                             data-tooltip="Bluesky"
                             data-link="https://bsky.app/profile/steamwolf.cc"
                         ></iconify-icon>
                         <iconify-icon 
                             class="social-icons" 
-                            icon="tabler:brand-spotify"
+                            icon="meteor-icons:spotify"
                             data-tooltip="Spotify"
                             data-link="https://open.spotify.com/artist/5JGLhuu4PrZ3XpRHoElokK?si=rql1Ww3wT6KMyiqlslzNRQ"
                         ></iconify-icon>
                         <iconify-icon 
                             class="social-icons" 
-                            icon="tabler:brand-bandcamp" 
+                            icon="meteor-icons:music" 
                             data-tooltip="Bandcamp"
                             data-link="https://steamwolf.bandcamp.com"
                         ></iconify-icon>
                         <iconify-icon 
                             class="social-icons" 
-                            icon="tabler:brand-youtube" 
+                            icon="meteor-icons:youtube" 
                             data-tooltip="YouTube"
                             data-link="https://www.youtube.com/@SteamWo1f"
                         ></iconify-icon>
                         <iconify-icon 
                             class="social-icons" 
-                            icon="tabler:brand-reddit" 
+                            icon="meteor-icons:reddit" 
                             data-tooltip="Reddit"
                             data-link="https://www.reddit.com/user/SteamWo1f"
                         ></iconify-icon>
                         <iconify-icon 
                             class="social-icons" 
-                            icon="tabler:brand-tumblr" 
+                            icon="meteor-icons:tumblr" 
                             data-tooltip="Tumblr"
                             data-link="https://www.tumblr.com/steamwo1f"
                         ></iconify-icon>
                         <iconify-icon 
                             class="social-icons" 
-                            icon="tabler:brand-paypal" 
+                            icon="meteor-icons:paypal" 
                             data-tooltip="PayPal"
                             data-link="https://www.paypal.com/paypalme/SteamWo1f"
                         ></iconify-icon>
                         <iconify-icon 
                             class="social-icons" 
-                            icon="tabler:coffee" 
+                            icon="meteor-icons:coffee" 
                             data-tooltip="Buy Me a Coffee"
                             data-link="https://ko-fi.com/steamwolf"
                         ></iconify-icon>
                         <iconify-icon 
                             class="social-icons" 
-                            icon="tabler:mail" 
+                            icon="meteor-icons:mail" 
                             data-tooltip="Email"
                             data-link="mailto:steamwolf.121.business@gmail.com"
                         ></iconify-icon>
@@ -111,13 +111,13 @@
                     <a class="music-button" href="https://steamwolf.bandcamp.com/track/bleeding-nostalgia" target="_blank">
                         <iconify-icon 
                             class="music-icon"
-                            icon="tabler:brand-bandcamp" 
+                            icon="meteor-icons:music" 
                         />
                     </a>
                     <a class="music-button" href="https://www.youtube.com/watch?v=0NGzYzaKl5c" target="_blank">
                         <iconify-icon 
                             class="music-icon"
-                            icon="tabler:brand-youtube" 
+                            icon="meteor-icons:youtube" 
                         />
                     </a>
                 </div>
@@ -131,19 +131,19 @@
                     <a class="music-button" href="https://open.spotify.com/track/39ejWxqGFi5p0IYJwCjc2D?si=36cb6714052444c3" target="_blank">
                         <iconify-icon 
                             class="music-icon" 
-                            icon="tabler:brand-spotify"
+                            icon="meteor-icons:spotify"
                         />
                     </a>
                     <a class="music-button" href="https://steamwolf.bandcamp.com/track/teal-stars" target="_blank">
                         <iconify-icon 
                             class="music-icon"
-                            icon="tabler:brand-bandcamp" 
+                            icon="meteor-icons:music" 
                         />
                     </a>
                     <a class="music-button" href="https://www.youtube.com/watch?v=tTMhUBuuya8" target="_blank">
                         <iconify-icon 
                             class="music-icon"
-                            icon="tabler:brand-youtube" 
+                            icon="meteor-icons:youtube" 
                         />
                     </a>
                 </div>
